[project]
name = "monitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Matias",email = "matias@ufscar.br"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.3,<3.0.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "telegram-send (>=0.37,<0.38)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
