[project]
name = "monitoring"
version = "0.1.0"
description = ""
authors = [
    {name = "Paulo Matias",email = "matias@ufscar.br"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "requests (>=2.34.2,<3.0.0)",
    "beautifulsoup4 (>=4.15.0,<5.0.0)",
    "telegram-send (>=0.39.2,<0.40.0)",
    "firebase-admin (>=7.4.0,<8.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
